Table record_lists {
  id          serial [pk]
  owner_id  integer [not null, ref: > users.id]
  list_name   varchar(100)
  created_at  timestamp
  updated_at  timestamp
  deleted_at  timestamp
}

Table notes {
  id          serial [pk]
  record_list_id     integer [not null, ref: > record_lists.id]
  owner_id  integer [not null, ref: > users.id]
  description text
  is_completed boolean
  created_at  timestamp
  updated_at  timestamp
  deleted_at  timestamp
}

Table users {
  id       serial [pk]
  name     varchar(100)
  email    varchar(100) [unique, not null]
  password varchar(100) [not null]
  created_at  timestamp
  updated_at  timestamp
  deleted_at  timestamp
}

Table acls {
  id          serial [pk]
  user_id     integer [not null, ref: > users.id, on delete: cascade]
  entity_type entity_type [not null]
  entity_id   integer [not null]
  permission  permission [not null]
  created_at  timestamp
  updated_at  timestamp
  deleted_at  timestamp
}

// Index acl_unique on acl (user_id, entity_type, entity_id) [unique]*/

Enum entity_type {
  list
  note
}

Enum permission {
  viewer
  editor
  owner
}

